--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="language" content="es" />
     <link rel="icon" type="image/svg+xml" href="src/assets/USO Coins.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Gachapon</title>
   </head>
   <body>
